[package]
name = "teamspeak_identity_utils"
description = "a commandline utitlity to create,view and manipulate teamspeak identities"
version = "0.0.1-DEV"
edition = "2021"
authors = ["Phyrone<phyrone@phyrone.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["terminal_size", "unicode", "derive", "cargo", ] }
log = { version = "0.4.17", features = ["release_max_level_info", "max_level_trace"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
tsclientlib = { version = "0.2.0", default-features = false }


[features]
default = ["create", "view"]
create = ["write"]
view = ["read"]
#edit = ["read","write"] TODO

read = []
write = []